working demo with pre-existing program

--- a/FaustAULiveCoder--iOS--Info.plist
+++ b/FaustAULiveCoder--iOS--Info.plist
@@ -4,5 +4,9 @@
 <dict>
 	<key>UILaunchScreen</key>
 	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
