--- a/FaustAULiveCoder.xcodeproj/xcshareddata/xcschemes/FaustAULiveCoderFramework (macOS).xcscheme
+++ b/FaustAULiveCoder.xcodeproj/xcshareddata/xcschemes/FaustAULiveCoderFramework (macOS).xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2337D46026C3875500867431"
-               BuildableName = "FaustAULiveCoder.app"
-               BlueprintName = "FaustAULiveCoder (iOS)"
+               BlueprintIdentifier = "2398533D27F128560019074E"
+               BuildableName = "FaustAULiveCoderFramework (macOS).framework"
+               BlueprintName = "FaustAULiveCoderFramework (macOS)"
                ReferencedContainer = "container:FaustAULiveCoder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2337D46026C3875500867431"
-            BuildableName = "FaustAULiveCoder.app"
-            BlueprintName = "FaustAULiveCoder (iOS)"
-            ReferencedContainer = "container:FaustAULiveCoder.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2337D46026C3875500867431"
-            BuildableName = "FaustAULiveCoder.app"
-            BlueprintName = "FaustAULiveCoder (iOS)"
+            BlueprintIdentifier = "2398533D27F128560019074E"
+            BuildableName = "FaustAULiveCoderFramework (macOS).framework"
+            BlueprintName = "FaustAULiveCoderFramework (macOS)"
             ReferencedContainer = "container:FaustAULiveCoder.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
