--- a/FaustAULiveCoderExtension (macOS)/Info.plist
+++ b/FaustAULiveCoderExtension (macOS)/Info.plist
@@ -6,21 +6,21 @@
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
+			<key>AudioComponentBundle</key>
+			<string>PilgrimTech.FaustAULiveCoderFramework</string>
 			<key>AudioComponents</key>
 			<array>
 				<dict>
 					<key>description</key>
-					<string>FaustAULiveCoderExtension (macOS)</string>
-					<key>factoryFunction</key>
-					<string>$(PRODUCT_MODULE_NAME).macOSExtensionStorboard</string>
+					<string>FaustAdaptorAudioUnit</string>
 					<key>manufacturer</key>
-					<string>SuPe</string>
+					<string>Plgm</string>
 					<key>name</key>
-					<string>Faust Adaptor Audio Unit</string>
+					<string>Plgm: FaustAdaptorAudioUnit</string>
 					<key>sandboxSafe</key>
-					<true/>
+					<false/>
 					<key>subtype</key>
-					<string>PLEZ</string>
+					<string>lcod</string>
 					<key>tags</key>
 					<array>
 						<string>Effects</string>
